--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "request": "*",
     "body-parser": "^1.17.2",
-    "multer": "^1.0.5"
+    "express": "^4.14.0",
+    "mongoose": "^5.9.25",
+    "multer": "^1.0.5",
+    "request": "*"
   },
   "engines": {
     "node": "8.x"
