--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.14.0",
     "mongoose": "^5.9.25",
     "multer": "^1.0.5",
+    "pug": "^3.0.0",
     "request": "*"
   },
   "engines": {
